--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </div>
     <div class="nav">
-      <div>SOLES</div>
+      <div class="logo_nav">SOLES</div>
       <div class="menu_dropdown">MENU</div>
       <div class="icons">
         <svg
@@ -60,9 +60,7 @@
       </div>
     </div>
 
-    <div class="hero">
-      <img src="/images/hero_dark.png" alt="banner" />
-    </div>
+    <div class="hero"></div>
 
     <div class="featured">
       <div class="merch">
@@ -92,6 +90,16 @@
               <p>$100</p>
             </div>
             <div class="wishlist_button_container">
+              <svg
+                class="add_to_cart"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11 11H7V13H11V17H13V13H17V11H13V7H11V11Z"
+                ></path>
+              </svg>
+
               <svg
                 class="add_to_wishlist"
                 xmlns="http://www.w3.org/2000/svg"
@@ -222,7 +230,13 @@
         </div>
       </div>
       <div class="cart_items items_container"></div>
+      <div class="cart_footer">
+        <div class="checkout">Checkout</div>
+        <div class="cost">45000</div>
+      </div>
     </div>
+
+    <div class="order_successful"><p>Order Successful</p></div>
     <script src="main.js"></script>
   </body>
 </html>
