--- a/index.html
+++ b/index.html
@@ -29,9 +29,35 @@
         <li>Settings</li>
         <li>Orders</li>
         <li>Coupons</li>
-        <li>LogOut</li>
+        <li class="login_button">LogIn</li>
       </ul>
     </div>
+
+    <div class="login">
+      <div class="container">
+        <h1>Log In</h1>
+        <div class="username_input input_container">
+          <input
+            type="text"
+            name="username"
+            id="username"
+            placeholder="username"
+            required
+          />
+        </div>
+        <div class="password_input input_container">
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="password"
+            required
+          />
+        </div>
+        <div class="login_submit">Log In</div>
+      </div>
+    </div>
+
     <div class="nav">
       <div class="logo_nav">SOLES</div>
       <div class="menu_dropdown">MENU</div>
