added product overlay

--- a/index.html
+++ b/index.html
@@ -151,6 +151,43 @@
       <div class="prod_list"></div>
     </div>
 
+    <div class="overlay product_overlay">
+      <!-- <div>
+        <div class="prod_display">
+          <div class="main_image">
+            <img src="/images/adidas_campus.png" alt="adidas_campus" />
+          </div>
+          <div class="thumbnails">
+            <img
+              class="active"
+              src="/images/adidas_campus.png"
+              alt="adidas_campus"
+            />
+            <img src="/images/adidas_campus.png" alt="adidas_campus" />
+            <img src="/images/adidas_campus.png" alt="adidas_campus" />
+            <img src="/images/adidas_campus.png" alt="adidas_campus" />
+          </div>
+        </div>
+
+        <div class="product_details">
+          <p>air force 1</p>
+          <p>$200</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+            beatae!
+          </p>
+        </div>
+      </div>
+      <div class="buttons">
+        <div class="add_to_cart_from_prod" id="${product.id}">
+          <p>Add to cart</p>
+        </div>
+        <div class="add_to_wishlist_from_prod" id="${product.id}">
+          <p>Add to wishlist</p>
+        </div>
+      </div> -->
+    </div>
+
     <div class="footer">
       <p class="logo">SOLES</p>
 
