--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="node_modules/jquery/dist/jquery.js"></script>
   </head>
   <body>
+    <div id="particles-js"></div>
+
     <div class="menu">
       <ul>
         <li>
@@ -101,15 +102,15 @@
 
     <div class="featured">
       <div class="merch">
-        <img src="/images/MERCH  light.jpg" alt="" />
+        <img src="/images/merch_dark.jpg" alt="" />
         <p>MERCH</p>
       </div>
       <div class="sale">
-        <img src="/images/sale light.jpg" alt="" />
+        <img src="/images/sale_dark.jpeg" alt="" />
         <p>SALE</p>
       </div>
       <div class="latest">
-        <img src="/images/latest light.jpeg" alt="" />
+        <img src="/images/latest_dark.jpeg" alt="" />
         <p>LATEST</p>
       </div>
     </div>
@@ -311,6 +312,7 @@
     </div>
 
     <div class="order_successful"><p>Order Successful</p></div>
+    <script type="text/javascript" src="particles.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
