made changes in the hero section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <div class="icons">
         <svg
           class="wishlist_button"
+          fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
         >
@@ -86,6 +87,7 @@
         </svg>
         <svg
           class="cart_button"
+          fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
         >
@@ -99,7 +101,34 @@
       </div>
     </div>
 
-    <div class="hero"></div>
+    <div class="nav_backdrop"></div>
+
+    <!-- <div class="hero"></div> -->
+
+    <div class="intro">
+      <video
+        src="/images/RTFKT x Nike Dunk Void (Trailer).mp4"
+        autoplay
+        muted
+        loop
+      ></video>
+      <div class="intro_text">
+        <h1>SOLES</h1>
+        <p>The future of footwear</p>
+        <p>Shop Now</p>
+        <a href="#products"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="arrow"
+            fill="currentColor"
+          >
+            <path
+              d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+    </div>
 
     <div class="featured">
       <div class="merch">
@@ -118,7 +147,7 @@
 
     <div class="heat products">
       <p class="heading">HEAT</p>
-      <div class="prod_list">
+      <div class="prod_list" id="products">
         <!-- <div class="card">
           <div class="prod_img">
             <img src="images/LS20240208222056.png" alt="" />
