updates on some minor bugs

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div class="nav">
+    <div class="nav" style="color: white">
       <div class="logo_nav">SOLES</div>
       <div class="menu_dropdown">MENU</div>
       <div class="icons">
