--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
       <div class="intro_text">
         <h1>SOLES</h1>
         <p>The future of footwear</p>
-        <p>Shop Now</p>
-        <a href="#products"
-          ><svg
+        <a href="#products">
+          <p>Shop Now</p>
+          <svg
             xmlns="http://www.w3.org/2000/svg"
             class="arrow"
             fill="currentColor"
