--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <body>
     <div id="particles-js"></div>
 
+    <div class="preloader"></div>
+
     <div class="menu">
       <ul>
         <li>
