preloader updates completed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
   <body>
     <div id="particles-js"></div>
 
-    <div class="preloader"></div>
+    <div class="preloader">
+      <h1>SOLES</h1>
+      <div class="container">
+        <div aria-live="assertive" role="alert" class="loader"></div>
+      </div>
+      <p>loading</p>
+    </div>
 
     <div class="menu">
       <ul>
